--- a/templates/index.html
+++ b/templates/index.html
@@ -43,76 +43,13 @@
 
     <section>
 
-        <!-- force-graph example -->
+        <!-- frucht graph example -->
       
-        <!-- <div id="force-graph"></div> -->
-      
-        <script>
-            const frucht_data = {
-                "nodes": [
-                    {"id": 1, "group": 1},
-                    {"id": 2, "group": 1},
-                    {"id": 3, "group": 1},
-                    {"id": 4, "group": 1},
-                    {"id": 5, "group": 1},
-                    {"id": 6, "group": 1},
-                    {"id": 7, "group": 1},
-                    {"id": 8, "group": 2},
-                    {"id": 9, "group": 2},
-                    {"id": 10, "group": 2},
-                    {"id": 11, "group": 2},
-                    {"id": 12, "group": 6}
-                ],
-                "links": [
-                    {"source": 1, "target": 2, "id": "1-2", value: 10, "id2": 0},
-                    {"source": 2, "target": 3, "id": "2-3", value: 10, "id2": 2},
-                    {"source": 3, "target": 4, "id": "3-4", value: 10, "id2": 3},
-                    {"source": 4, "target": 5, "id": "4-5", value: 10, "id2": 4},
-                    {"source": 5, "target": 6, "id": "5-6", value: 10, "id2": 5},
-                    {"source": 6, "target": 7, "id": "6-7", value: 10, "id2": 6},
-                    {"source": 7, "target": 1, "id": "7-1", value: 10, "id2": 7},
-                    {"source": 1, "target": 8, "id": "1-8", value: 1},
-                    {"source": 2, "target": 8, "id": "2-8", value: 1},
-                    {"source": 3, "target": 9, "id": "3-9", value: 1},
-                    {"source": 4, "target": 9, "id": "4-9", value: 1},
-                    {"source": 5, "target": 10, "id": "1-2", value: 1},
-                    {"source": 6, "target": 10, "id": "1-2", value: 1},
-                    {"source": 7, "target": 11, "id": "1-2", value: 1},
-                    {"source": 8, "target": 11, "id": "1-2", value: 1},
-                    {"source": 9, "target": 12, "id": "1-2", value: 1},
-                    {"source": 10, "target": 12, "id": "1-2", value: 1},
-                    {"source": 11, "target": 12, "id": "1-2", value: 1}
-                ]
-            };
-
-            const Graph = ForceGraph()
-            (document.getElementById('force-graph'))
-              .width(600)
-              .height(400)
-              .nodeLabel('id')
-              .nodeAutoColorBy('group')
-              .linkCurvature(d => - d.value / 30)
-              .linkDirectionalParticles(1) // d => 1 + d.value / 3)
-              .linkDirectionalParticleSpeed(d => d.value * 0.001)
-            //   .d3Force(
-            //     'charge', 
-            //     d3.forceManyBody(frucht_data.nodes)
-            //         // .id((link) => link.id2)
-            //         .strength(-30))
-            //   .d3Force('charge')
-              .d3Force(
-                'link', 
-                d3.forceLink(frucht_data)
-                    .id((link) => link.id2)
-                    .distance(link => 3 * link.value))
-              .graphData(frucht_data);
-        </script>
-
         <div id="visjs-network"></div>
         <script type="text/javascript">
           // create an array with nodes
-          var nodes = new vis.DataSet([
-            { id: 1, label: "1", title: "I have a popup!" },
+          var frucht_nodes = new vis.DataSet([
+            { id: 1, label: "1", title: "I have a popup!", color: "red" },
             { id: 2, label: "2", title: "I have a popup!" },
             { id: 3, label: "3", title: "I have a popup!" },
             { id: 4, label: "4", title: "I have a popup!" },
@@ -127,8 +64,8 @@
           ]);
     
           // create an array with edges
-          var edges = new vis.DataSet([
-            { from: 1, to: 2 },
+          var frucht_edges = new vis.DataSet([
+            { from: 1, to: 2, color: undefined },
             { from: 2, to: 3 },
             { from: 3, to: 4 },
             { from: 4, to: 5 },
@@ -150,9 +87,9 @@
     
           // create a network
           var container = document.getElementById("visjs-network");
-          var data = {
-            nodes: nodes,
-            edges: edges,
+          var frucht_data = {
+            nodes: frucht_nodes,
+            edges: frucht_edges,
           };
     
           var options = {
@@ -162,8 +99,36 @@
             },
           };
     
-          var network = new vis.Network(container, data, options);
-        </script>
+          var network = new vis.Network(container, frucht_data, options);
+
+          network.on("selectNode", function (params) {
+            console.log("selectNode Event:", params);
+            defaultColors();
+            colorNode(params);
+          });
+
+          function defaultColors() {
+            console.log("runing default colors fn")
+            for (let i = 1; i <= frucht_nodes.length; i++) {
+              var node = frucht_nodes.get(i);
+              node.color = {
+                border: "LightGray",
+                background: "LightGray",
+              };
+              frucht_nodes.update(node)
+            }
+          }
+          function colorNode(params) {
+            console.log(params.nodes);
+            const id = params.nodes[0];
+            var selected_node = frucht_nodes.get(id)
+            selected_node.color = {
+              border: "red",
+              background: "red",
+            }
+            frucht_nodes.update(selected_node)
+          }
+      </script>
     </section>      
 
 <!-- P8 interactive standard form -->
