--- a/templates/index.html
+++ b/templates/index.html
@@ -49,18 +49,18 @@
         <script type="text/javascript">
           // create an array with nodes
           var frucht_nodes = new vis.DataSet([
-            { id: 1, label: "1", title: "I have a popup!" },
-            { id: 2, label: "2", title: "I have a popup!" },
-            { id: 3, label: "3", title: "I have a popup!" },
-            { id: 4, label: "4", title: "I have a popup!" },
-            { id: 5, label: "5", title: "I have a popup!" },
-            { id: 6, label: "6", title: "I have a popup!" },
-            { id: 7, label: "7", title: "I have a popup!" },
-            { id: 8, label: "8", title: "I have a popup!" },
-            { id: 9, label: "9", title: "I have a popup!" },
-            { id: 10, label: "10", title: "I have a popup!" },
-            { id: 11, label: "11", title: "I have a popup!" },
-            { id: 12, label: "12", title: "I have a popup!" },
+            { id: 1, label: "1", title: "vertex 1" },
+            { id: 2, label: "2", title: "vertex 2" },
+            { id: 3, label: "3", title: "vertex 3" },
+            { id: 4, label: "4", title: "vertex 4" },
+            { id: 5, label: "5", title: "vertex 5" },
+            { id: 6, label: "6", title: "vertex 6" },
+            { id: 7, label: "7", title: "vertex 7" },
+            { id: 8, label: "8", title: "vertex 8" },
+            { id: 9, label: "9", title: "vertex 9" },
+            { id: 10, label: "10", title: "vertex 10" },
+            { id: 11, label: "11", title: "vertex 11" },
+            { id: 12, label: "12", title: "vertex 12" },
           ]);
     
           // create an array with edges
